@@ -31,66 +31,65 @@ begin protocol specification
 	on string  "On"
 	all string "0"
 	size "8"
-	device timeout "1.0"
+	device timeout "2.0"
 	string interpretation mode "LITERAL"
 	begin PM_LOG_IN 
 		expect "\n"
 		send "\IAC\DO\TELOPT_ECHO\IAC\DO\TELOPT_SGA"
-		expect "word>"
+		expect "Enter password>"
 		send "baytech\r\n"
-		expect "Menu:\r\n"
-		expect "tion>"
+		expect "Enter Selection>"
 		send "1\r\n"
-		expect "C-3>"
+		expect "RPC-3>"
 	end PM_LOG_IN
 	begin PM_CHECK_LOGIN
 		send "\r\n"
-		expect "C-3>"
+		expect "RPC-3>"
 	end PM_CHECK_LOGIN
 	begin PM_LOG_OUT
 		send "menu\r\n"
-		expect "tion>"
+		expect "Enter Selection>"
 		send "6\r\n"
 	end PM_LOG_OUT
 	begin PM_UPDATE_PLUGS 
 		send "status\r\n"
-		expect "Breaker:[^\n]*\r\n"
+		expect "Circuit Breaker:[^\n]*\r\n"
 		expect "[^\n]*(On|Off)[^\n]*\r\n"
 			map "1" "1"
 		expect "[^\n]*(On|Off)[^\n]*\r\n"
-			map "1" "2"
+			map "2" "2"
 		expect "[^\n]*(On|Off)[^\n]*\r\n"
-			map "1" "3"
+			map "3" "3"
 		expect "[^\n]*(On|Off)[^\n]*\r\n"
-			map "1" "4"
+			map "4" "4"
 		expect "[^\n]*(On|Off)[^\n]*\r\n"
-			map "1" "5"
+			map "5" "5"
 		expect "[^\n]*(On|Off)[^\n]*\r\n"
-			map "1" "6"
+			map "6" "6"
 		expect "[^\n]*(On|Off)[^\n]*\r\n"
-			map "1" "7"
+			map "7" "7"
 		expect "[^\n]*(On|Off)[^\n]*\r\n"
-			map "1" "8"
-		expect "C-3>"
+			map "8" "8"
+		expect "RPC-3>"
 	end PM_UPDATE_PLUGS 
 	begin PM_POWER_ON
 		send "on %s\r\n"
-		expect "C-3>"
+		expect "RPC-3>"
 		delay "0.3"
 	end PM_POWER_ON
 	begin PM_POWER_OFF
 		send "off %s\r\n"
-		expect "C-3>"
+		expect "RPC-3>"
 		delay "0.3"
 	end PM_POWER_OFF
 	begin PM_POWER_CYCLE
 		send "reboot %s\r\n"
-		expect "C-3>"
+		expect "RPC-3>"
 		delay "0.3"
 	end PM_POWER_CYCLE
 	begin PM_RESET
 		send "reboot %s\r\n"
-		expect "C-3>"
+		expect "RPC-3>"
 		delay "0.3"
 	end PM_RESET
 	plug name "1"
